//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  walletAddress String [unique, not null]
  name String [unique, not null]
  nonce String [unique, not null]
  role Role [not null, default: 'User']
  deletedAt DateTime
  lastLogin DateTime
  createdAt DateTime [default: `now()`, not null]
  notifications UserNotification [not null]
  betSlips BetSlip [not null]
  leaderboards Leaderboard [not null]
  transactions Transaction [not null]
}

Table BetSlipGame {
  id String [pk]
  gameId Int
  numberOfParticipants Int [not null, default: 0]
  tokens SplToken [not null]
  tokenAmounts Int[] [not null]
  v13Right Int [not null]
  v12Right Int [not null]
  v11Right Int [not null]
  v10Right Int [not null]
  home Boolean [not null]
  away Boolean [not null]
  draw Boolean [not null]
  gameResult Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  betSlips BetSlip [not null]
  games Game [not null]
}

Table BetSlip {
  id String [pk]
  totalWager Float [not null]
  status BetSlipStatusType [not null]
  predictions Prediction [not null]
  finalResults Int[] [not null]
  userId String
  betSlipGameId String
  totalWin Int [not null]
  createdAt DateTime [default: `now()`, not null]
  user User
  BetSlipGame BetSlipGame
}

Table Prediction {
  id String [pk]
  first Boolean [not null]
  equal Boolean [not null]
  second Boolean [not null]
  BetSlip BetSlip
  betSlipId String
}

Table Game {
  id String [pk]
  betSlipGameId String
  opponent1 String [not null]
  opponent2 String [not null]
  dateTime DateTime [default: `now()`, not null]
  result String [not null]
  leage String [not null]
  BetSlipGame BetSlipGame [not null]
}

Table Leaderboard {
  id String [pk]
  userId String
  points Int [not null]
  rank Int [not null]
  createdAt DateTime [default: `now()`, not null]
  user User
}

Table Transaction {
  id String [pk]
  userId String
  type String [not null]
  amount Float [not null]
  createdAt DateTime [default: `now()`, not null]
  user User
}

Table SplToken {
  id String [pk]
  name String [not null]
  address String [unique, not null]
  decimals Int [not null]
  symbol String [not null]
  priority Int [not null]
  icon String [not null]
  BetSlipGame BetSlipGame
  betSlipGameId String
}

Table Notification {
  id String [pk]
  title String [not null]
  body String [not null]
  image String
  createdAt DateTime [default: `now()`, not null]
  users UserNotification [not null]
}

Table UserNotification {
  user User [not null]
  userId String [not null]
  notification Notification [not null]
  notificationId String [not null]
  readAt DateTime

  indexes {
    (userId, notificationId) [pk]
  }
}

Table BetSlipGameToGame {
  gamesId String [ref: > Game.id]
  betslipgameId String [ref: > BetSlipGame.id]
}

Enum Role {
  Superadmin
  Admin
  Tester
  User
}

Enum GlobalStatusType {
  Success
  Info
  Warning
  Maintenance
}

Enum BetSlipStatusType {
  Deposited
  Pending
  Resolved
}

Ref: BetSlip.userId > User.id

Ref: BetSlip.betSlipGameId > BetSlipGame.id

Ref: Prediction.betSlipId > BetSlip.id

Ref: Leaderboard.userId > User.id

Ref: Transaction.userId > User.id

Ref: SplToken.betSlipGameId > BetSlipGame.id

Ref: UserNotification.userId > User.id [delete: Cascade]

Ref: UserNotification.notificationId > Notification.id [delete: Cascade]